<resources>
    <string name="app_name">Travel Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="guardar">Guardar</string>
    <string name="millas">Millas</string>
    <string name="observaciones">Observaciones</string>
    <string name="title_estado_de_viajes">Estado de Viajes</string>
    <string name="fecha">Fecha</string>
    <string name="concepto">Concepto</string>
    <string name="monto">Monto</string>
    <string name="balance">Balance</string>
    <string name="gasto_button">Gasto</string>
    <string name="viaje_button">Viaje</string>
    <string name="conceptoGasto">Concepto de gasto</string>
    <string name="montoGasto">Monto de gasto</string>


    <string name="conceptoViaje">Concepto de viaje</string>
    <string name="montoViaje">Monto de viaje</string>
    <string name="balance_viaje">Balance Viaje</string>
    <string name="millasViaje">Millas del viaje</string>
    <string name="tipo">tipo</string>
    <string name="estado">estado</string>
    <string name="contin_a">Continúa</string>
    <string name="llamada">Llamada</string>
    <string name="comentario">comentario</string>
    <string name="BalanceDeViajes">Balance De Viajes</string>
    <string name="clientes">Clientes</string>
    <string name="viajes">Viajes</string>

    <string name="clienteFramen">Clientes </string>

    <string-array name="estado">
        <item>Continúa</item>
        <item>Finaliza</item>
    </string-array>

    <string-array name="lista">
        <item>Llamada</item>
        <item>Correo</item>
        <item>Visita</item>
    </string-array>
</resources>